week-1:-user-product display,adminside product add,edit,block

--- a/views/admin/admin-error.ejs
+++ b/views/admin/admin-error.ejs
@@ -39,7 +39,7 @@
 
   <script>
       function godashboard() {
-          window.location.href = "/admin";
+          window.location.href = "/admin/login";
       }
   </script>
 
