--- a/views/admin/product-add.ejs
+++ b/views/admin/product-add.ejs
@@ -307,18 +307,18 @@ function validateForm() {
     if (name.trim() === "") {
         displayErrorMessage('productName-error', 'Please enter a product name.');
         isValid = false;
-    } else if (!/^[a-zA-Z\s]+$/.test(name.trim())) {
-        displayErrorMessage('productName-error', 'Product name should contain only alphabetic characters.');
-        isValid = false;
-    }
+    } 
+    // else if (!/^[a-zA-Z0-9\s.,\/\-:;()&\[\]'"!?]*$/.test(name.trim())) {
+    // displayErrorMessage('productName-error', 'Product name should contain only alphabetic characters and numbers.');
+    // isValid = false;
+    // }
 
     if (description.trim() === "") {
-        displayErrorMessage('description-error', 'Please enter a product description.');
-        isValid = false;
-    } else if (!/^[a-zA-Z\s]+$/.test(description.trim())) {
-        displayErrorMessage('description-error', 'Product description should contain only alphabetic characters.');
-        isValid = false;
-    }
+    displayErrorMessage('description-error', 'Please enter a product description.');
+    isValid = false;
+    } 
+
+
 
     if (parseInt(quantity) < 0) {
         displayErrorMessage('quantity-error', 'Please enter a valid non-negative quantity.');
