--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -5,10 +5,11 @@
               <div class="col-lg-3 col-md-6 col-sm-6">
                   <div class="footer__about">
                       <div class="footer__logo">
-                          <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                          <a href="#"><img src="img/006_006-nike-logos-jordan-white.jpg" alt=""></a>
                       </div>
                       <p>The customer is at the heart of our unique business model, which includes design.</p>
-                      <a href="#"><img src="img/payment.png" alt=""></a>
+                      <!-- <a href="#"><img src="img/payment.png" alt=""></a> -->
+                      <p>Nike</p>
                   </div>
               </div>
               <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
