--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -84,7 +84,7 @@
                <div class="col-lg-6 col-md-6">
                    <nav class="header__menu mobile-menu">
                        <ul>
-                           <li class="active"><a href="#">Home</a></li>
+                           <li class="active"><a href="/">Home</a></li>
                            <li><a href="/shop">Shop</a></li>
                        </ul>
                    </nav>
