--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -60,6 +60,7 @@
                         <button type="submit" class="btn btn-black btn-lg" style="width: 160px; border-radius: 25px; margin-left: auto;">Login</button>
                     </div>
 
+
                     <!-- Submit button -->
                     <!-- <div style="display: flex;">
                         <button type="submit" class="btn btn-black btn-lg" style="width: 160px; border-radius: 25px; margin-left: auto;">Login</button>
@@ -76,6 +77,12 @@
                         <i class="fab fa-google fa-lg">  </i> Sign in with Google
 
                     </a>
+                    <br>
+                    <br>
+                    <div class="divider d-flex align-items-center my-4">
+           
+                        <a href="/signup" class="text-decoration-none" style="color: rgb(51, 163, 255);">Create Account</a>
+                    </div>
                     <!-- <a class="btn btn-primary btn-lg btn-block" style="background-color: #55acee;" href="#!" role="button">
                         <i class="fab fa-twitter me-2"></i>Continue with Twitter
                     </a> -->
