--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -97,7 +97,7 @@
                             <div class="d-flex justify-content-center">
                                 <a href="/auth/google" class="btn btn-outline-dark me-2 rounded-circle p-2">
                                     <!-- Image with specified width and height -->
-                                    <img src="/images/google/search.png" alt="Google Sign Up" width="24" height="24">
+                                    <img src="/img/search.png" alt="Google Sign Up" width="24" height="24">
                                 </a>
                             </div>
                         </div>
