--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -22,8 +22,8 @@
     <div class="container py-5 h-100">
         <div class="row d-flex align-items-center justify-content-center h-100">
             <div class="col-md-8 col-lg-7 col-xl-6">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
-                     class="img-fluid" alt="Phone illustration">
+                <img src="img/nike-kick-img.jpeg"
+                     class="img-fluid" alt="Phone illustration" >
             </div>
            
             <div class="col-md-7 col-lg-5 col-xl-4 offset-xl-1">
@@ -81,7 +81,13 @@
                     <br>
                     <div class="divider d-flex align-items-center my-4">
            
-                        <a href="/signup" class="text-decoration-none" style="color: rgb(51, 163, 255);">Create Account</a>
+                        <a href="/signup" class="text-decoration-none" style="color: rgb(2, 85, 44);">Create Account</a>
+    
+                    </div>
+                    <div class="divider d-flex align-items-center my-4">
+           
+                        
+                        <a href="/" class="text-decoration-none" style="color: rgb(7, 7, 7);">Continue with out login</a>
                     </div>
                     <!-- <a class="btn btn-primary btn-lg btn-block" style="background-color: #55acee;" href="#!" role="button">
                         <i class="fab fa-twitter me-2"></i>Continue with Twitter
